welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: type MIN_VALUE is not a member of object Int
  var max:Int.MIN_VALUE
              ^max2Value:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var max:Int.MIN_VALUE
      ^max2Value:2: error: local variables must be initialized
  var max:Int.MIN_VALUE
      ^max2Value:3: error: type MIN_VALUE is not a member of object Int
  var min:Int.MIN_VALUE
              ^max2Value:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var min:Int.MIN_VALUE
      ^max2Value:3: error: local variables must be initialized
  var min:Int.MIN_VALUE
      ^